--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,12 @@ body{
 }
 
 a{
-  color: white;
+  color: #888888;
+  font-size: 15px;
 }
 
 a:hover{
-  color: #c7a865;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -61,13 +62,17 @@ h1, h5{
 .sidebar{
   background-color: #323232;
   height: 100%;
-  width: 8rem;
+  width: 9em;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
   overflow-x: hidden;
   padding: 20px 0 0;
+}
+
+.link-box{
+  margin: 2.5rem 0;
 }
 
 .main {
@@ -89,4 +94,38 @@ h1, h5{
 
 .constant-size{
   width: 12rem;
+}
+
+.copyright{
+  font-size: 12px;
+}
+
+.email{
+  color: #fff;
+  text-decoration: underline;
+}
+
+.email:hover{
+  color: #c7a865;
+  text-decoration: underline;
+}
+
+/*************************************************************************************************/
+/*                                  Pseudo Class Selectors                                       */
+/*************************************************************************************************/
+
+::-webkit-scrollbar {
+    background-color: #242323 ;
+    width: 14px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #cccccc;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
