--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@ h1, h2, h3, h4, h5, h6{
   font-size: 28px;
 }
 
+.sub-title{
+  font-size: 18px; 
+}
+
 .modal-title{
   font-family: 'Montserrat', sans-serif;
   color: #000;
